@@ -26,10 +26,11 @@ package com.xiyu.bid.entity;
  * 映射目标必须在 DEFINITIONS map 中（或是 admin/manager/staff 等系统内置 code）。
  */
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -49,13 +50,13 @@ public final class RoleProfileCatalog {
     public static final String BRAND_AUTH_REVOKE_PERMISSION = "brand-auth.revoke";
 
     // PRD §2 角色：销售/业务负责人、投标负责人、投标部门管理员、任务执行人
-    public static final String SALES_CODE = "sales";
-    public static final String BID_LEAD_CODE = "bid_lead";
-    public static final String BID_ADMIN_CODE = "bid_admin";
-    public static final String BID_SPECIALIST_CODE = "bid_specialist";
-    public static final String ADMIN_STAFF_CODE = "admin_staff";
+    public static final String SALES_CODE = "bid-projectLeader";
+    public static final String BID_LEAD_CODE = "bid-TeamLeader";
+    public static final String BID_ADMIN_CODE = "/bidAdmin";
+    public static final String BID_SPECIALIST_CODE = "bid-Team";
+    public static final String ADMIN_STAFF_CODE = "bid-administration";
     /** 跨部门协同人员：项目任务处理 */
-    public static final String BID_OTHER_DEPT_CODE = "bid_other_dept";
+    public static final String BID_OTHER_DEPT_CODE = "bid-otherDept";
 
     /** 拥有全局数据权限与操作权限的角色码集合。 */
     public static final Set<String> GLOBAL_ACCESS_ROLES = Set.of(ADMIN_CODE, BID_ADMIN_CODE, BID_LEAD_CODE);
@@ -63,8 +64,16 @@ public final class RoleProfileCatalog {
     /** 不应继承 Legacy User.Role 鉴权兼容（ROLE_ADMIN/MANAGER）的新式受限角色。
      *  <p>这些角色仅靠自身 {@code ROLE_<CODE>} + 细粒度 menuPermissions 鉴权。若让它们继承
      *  MANAGER 兼容，会因 {@code hasAnyRole(... 'MANAGER' ...)} 类白名单误入本不应访问的模块。
-     *  <p>其合法 API（如 {@code TaskController}）用 {@code isAuthenticated()}，移除 legacy 兼容不影响任务处理。 */
-    public static final Set<String> ROLES_WITHOUT_LEGACY_ROLE_COMPAT = Set.of(BID_OTHER_DEPT_CODE, ADMIN_STAFF_CODE, BID_SPECIALIST_CODE);
+     *  <p>其合法 API（如 {@code TaskController}）用 {@code isAuthenticated()}，移除 legacy 兼容不影响任务处理。
+     *  <p>使用 case-insensitive TreeSet 以支持大小写不敏感查找。 */
+    public static final Set<String> ROLES_WITHOUT_LEGACY_ROLE_COMPAT;
+    static {
+        java.util.TreeSet<String> set = new java.util.TreeSet<>(String.CASE_INSENSITIVE_ORDER);
+        set.add(BID_OTHER_DEPT_CODE);
+        set.add(ADMIN_STAFF_CODE);
+        set.add(BID_SPECIALIST_CODE);
+        ROLES_WITHOUT_LEGACY_ROLE_COMPAT = Collections.unmodifiableSet(set);
+    }
 
     /** 允许提交投标（推进至评标阶段）的业务角色码集合，对齐前端 useProjectDraftingPermissions.canSubmitBid。
      *  <p>语义划分：
@@ -89,63 +98,68 @@ public final class RoleProfileCatalog {
     public static final Set<String> TASK_MUTATION_ALLOWED_ROLES =
             Set.of(ADMIN_CODE, BID_ADMIN_CODE, BID_LEAD_CODE, BID_SPECIALIST_CODE);
 
-    private static final Map<String, SeedDefinition> DEFINITIONS = Map.ofEntries(
-            Map.entry(ADMIN_CODE, new SeedDefinition(ADMIN_CODE, "管理员", "系统管理员，拥有所有权限", true, "all", List.of("all"))),
-                                                Map.entry(SALES_CODE, new SeedDefinition(SALES_CODE, "投标项目负责人", "立项发起人，维护客户与开标信息", true, "self",
-                    List.of("dashboard", "bidding", "project",
-                            "project.create", "project.view", "deposit.return.fill",
-                            BIDDING_CREATE_PERMISSION,
-                            "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
-                            "dashboard:view_tender_list", "dashboard:view_project_list", "dashboard:view_active_projects",
-                            "dashboard:view_activity_list", "dashboard:view_priority_todos"))),
-            Map.entry(BID_LEAD_CODE, new SeedDefinition(BID_LEAD_CODE, "投标组长", "标书编制与评标推进负责人", true, "all",
-                    List.of("dashboard", "bidding", "project", "resource",
-                            "task.assign", "evaluation.update", "result.register",
-                            "retrospective.submit", "closure.request",
-                            BIDDING_MANAGE_PERMISSION, BIDDING_CREATE_PERMISSION,
-                            BIDDING_DELETE_PERMISSION,
-                            BRAND_AUTH_VIEW_PERMISSION, BRAND_AUTH_CREATE_PERMISSION,
-                            BRAND_AUTH_EDIT_PERMISSION, BRAND_AUTH_REVOKE_PERMISSION,
-                            "knowledge-brand-auth",
-                            "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
-                            "dashboard:view_tender_list", "dashboard:view_technical_task", "dashboard:view_review_list",
-                            "dashboard:view_project_list", "dashboard:view_active_projects",
-                            "dashboard:view_activity_list", "dashboard:view_priority_todos",
-                            WAREHOUSE_MANAGE_PERMISSION))),
-            Map.entry(BID_ADMIN_CODE, new SeedDefinition(BID_ADMIN_CODE, "投标管理员", "复盘审核与结项闸门审批", true, "all",
-                    List.of("dashboard", "operation-logs", "bidding", "project", "knowledge", "resource",
-                            "analytics", "settings",
-                            "task.review", "retrospective.submit", "retrospective.review", "closure.review", "lead.assign",
-                            BIDDING_MANAGE_PERMISSION, BIDDING_CREATE_PERMISSION,
-                            BIDDING_DELETE_PERMISSION, BIDDING_SYNC_PERMISSION,
-                            BRAND_AUTH_VIEW_PERMISSION, BRAND_AUTH_CREATE_PERMISSION,
-                            BRAND_AUTH_EDIT_PERMISSION, BRAND_AUTH_REVOKE_PERMISSION,
-                            "knowledge-brand-auth",
-                            "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
-                            "dashboard:view_tender_list", "dashboard:view_project_list", "dashboard:view_team_task",
-                            "dashboard:view_global_projects", "dashboard:view_active_projects", "dashboard:view_team_performance",
-                            "dashboard:view_approval_list", "dashboard:view_process_timeline", "dashboard:view_activity_list",
-                            "dashboard:view_priority_todos",
-                            WAREHOUSE_MANAGE_PERMISSION))),
-            Map.entry(BID_SPECIALIST_CODE, new SeedDefinition(BID_SPECIALIST_CODE, "投标专员", "投标辅助、标书审核与任务处理", true, "self",
-                    List.of("dashboard", "bidding", "project", "resource",
-                            "task.view.own", "task.handle.own", "evaluation.update",
-                            "retrospective.submit",
-                            BIDDING_CREATE_PERMISSION,
-                            BRAND_AUTH_VIEW_PERMISSION, BRAND_AUTH_CREATE_PERMISSION,
-                            BRAND_AUTH_EDIT_PERMISSION, "knowledge-brand-auth",
-                            QUICK_START_PERMISSION, AI_CENTER_PERMISSION, "operation-logs",
-                            "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
-                            "dashboard:view_tender_list", "dashboard:view_technical_task", "dashboard:view_active_projects",
-                            "dashboard:view_activity_list", "dashboard:view_priority_todos",
-                            WAREHOUSE_MANAGE_PERMISSION))),
-            Map.entry(ADMIN_STAFF_CODE, new SeedDefinition(ADMIN_STAFF_CODE, "行政人员", "资质证书管理与行政事务", true, "self",
-                    List.of("certificate.manage", "qualification.view"))),
-            Map.entry(BID_OTHER_DEPT_CODE, new SeedDefinition(BID_OTHER_DEPT_CODE, "跨部门协同人员", "项目任务处理", true, "self",
-                    List.of("task.view.own", "task.handle.own",
-                            "dashboard:view_welcome_banner", "dashboard:view_technical_task",
-                            "dashboard:view_activity_list", "dashboard:view_priority_todos")))
-    );
+    /** 角色定义表，key 为角色 code。使用 case-insensitive TreeMap 以支持大小写不敏感查找
+     *  （OSS 同步与本地 DB 可能传入不同大小写的 code）。 */
+    private static final Map<String, SeedDefinition> DEFINITIONS;
+    static {
+        TreeMap<String, SeedDefinition> map = new TreeMap<>(String.CASE_INSENSITIVE_ORDER);
+        map.put(ADMIN_CODE, new SeedDefinition(ADMIN_CODE, "管理员", "系统管理员，拥有所有权限", true, "all", List.of("all")));
+        map.put(SALES_CODE, new SeedDefinition(SALES_CODE, "投标项目负责人", "立项发起人，维护客户与开标信息", true, "self",
+                List.of("dashboard", "bidding", "project",
+                        "project.create", "project.view", "deposit.return.fill",
+                        BIDDING_CREATE_PERMISSION,
+                        "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
+                        "dashboard:view_tender_list", "dashboard:view_project_list", "dashboard:view_active_projects",
+                        "dashboard:view_activity_list", "dashboard:view_priority_todos")));
+        map.put(BID_LEAD_CODE, new SeedDefinition(BID_LEAD_CODE, "投标组长", "标书编制与评标推进负责人", true, "all",
+                List.of("dashboard", "bidding", "project", "resource",
+                        "task.assign", "evaluation.update", "result.register",
+                        "retrospective.submit", "closure.request",
+                        BIDDING_MANAGE_PERMISSION, BIDDING_CREATE_PERMISSION,
+                        BIDDING_DELETE_PERMISSION,
+                        BRAND_AUTH_VIEW_PERMISSION, BRAND_AUTH_CREATE_PERMISSION,
+                        BRAND_AUTH_EDIT_PERMISSION, BRAND_AUTH_REVOKE_PERMISSION,
+                        "knowledge-brand-auth",
+                        "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
+                        "dashboard:view_tender_list", "dashboard:view_technical_task", "dashboard:view_review_list",
+                        "dashboard:view_project_list", "dashboard:view_active_projects",
+                        "dashboard:view_activity_list", "dashboard:view_priority_todos",
+                        WAREHOUSE_MANAGE_PERMISSION)));
+        map.put(BID_ADMIN_CODE, new SeedDefinition(BID_ADMIN_CODE, "投标管理员", "复盘审核与结项闸门审批", true, "all",
+                List.of("dashboard", "operation-logs", "bidding", "project", "knowledge", "resource",
+                        "analytics", "settings",
+                        "task.review", "retrospective.submit", "retrospective.review", "closure.review", "lead.assign",
+                        BIDDING_MANAGE_PERMISSION, BIDDING_CREATE_PERMISSION,
+                        BIDDING_DELETE_PERMISSION, BIDDING_SYNC_PERMISSION,
+                        BRAND_AUTH_VIEW_PERMISSION, BRAND_AUTH_CREATE_PERMISSION,
+                        BRAND_AUTH_EDIT_PERMISSION, BRAND_AUTH_REVOKE_PERMISSION,
+                        "knowledge-brand-auth",
+                        "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
+                        "dashboard:view_tender_list", "dashboard:view_project_list", "dashboard:view_team_task",
+                        "dashboard:view_global_projects", "dashboard:view_active_projects", "dashboard:view_team_performance",
+                        "dashboard:view_approval_list", "dashboard:view_process_timeline", "dashboard:view_activity_list",
+                        "dashboard:view_priority_todos",
+                        WAREHOUSE_MANAGE_PERMISSION)));
+        map.put(BID_SPECIALIST_CODE, new SeedDefinition(BID_SPECIALIST_CODE, "投标专员", "投标辅助、标书审核与任务处理", true, "self",
+                List.of("dashboard", "bidding", "project", "resource",
+                        "task.view.own", "task.handle.own", "evaluation.update",
+                        "retrospective.submit",
+                        BIDDING_CREATE_PERMISSION,
+                        BRAND_AUTH_VIEW_PERMISSION, BRAND_AUTH_CREATE_PERMISSION,
+                        BRAND_AUTH_EDIT_PERMISSION, "knowledge-brand-auth",
+                        QUICK_START_PERMISSION, AI_CENTER_PERMISSION, "operation-logs",
+                        "dashboard:view_welcome_banner", "dashboard:view_metric_cards", "dashboard:view_calendar",
+                        "dashboard:view_tender_list", "dashboard:view_technical_task", "dashboard:view_active_projects",
+                        "dashboard:view_activity_list", "dashboard:view_priority_todos",
+                        WAREHOUSE_MANAGE_PERMISSION)));
+        map.put(ADMIN_STAFF_CODE, new SeedDefinition(ADMIN_STAFF_CODE, "行政人员", "资质证书管理与行政事务", true, "self",
+                List.of("certificate.manage", "qualification.view")));
+        map.put(BID_OTHER_DEPT_CODE, new SeedDefinition(BID_OTHER_DEPT_CODE, "跨部门协同人员", "项目任务处理", true, "self",
+                List.of("task.view.own", "task.handle.own",
+                        "dashboard:view_welcome_banner", "dashboard:view_technical_task",
+                        "dashboard:view_activity_list", "dashboard:view_priority_todos")));
+        DEFINITIONS = Collections.unmodifiableSortedMap(map);
+    }
 
 
     private RoleProfileCatalog() {
@@ -167,7 +181,7 @@ public final class RoleProfileCatalog {
         if (roleCode == null) {
             return DEFINITIONS.get(ADMIN_CODE);
         }
-        return DEFINITIONS.getOrDefault(roleCode.trim().toLowerCase(Locale.ROOT), DEFINITIONS.get(ADMIN_CODE));
+        return DEFINITIONS.getOrDefault(roleCode.trim(), DEFINITIONS.get(ADMIN_CODE));
     }
 
     public static SeedDefinition definitionForLegacyRole(User.Role role) {
@@ -181,12 +195,11 @@ public final class RoleProfileCatalog {
     }
 
     public static User.Role legacyRoleForCode(String roleCode) {
-        String normalizedCode = roleCode == null ? "" : roleCode.trim().toLowerCase(Locale.ROOT);
-        return switch (normalizedCode) {
-            case ADMIN_CODE, BID_ADMIN_CODE -> User.Role.ADMIN;
-            case BID_LEAD_CODE, SALES_CODE -> User.Role.MANAGER;
-            default -> User.Role.MANAGER;
-        };
+        String normalizedCode = roleCode == null ? "" : roleCode.trim();
+        if (normalizedCode.equalsIgnoreCase(ADMIN_CODE) || normalizedCode.equalsIgnoreCase(BID_ADMIN_CODE)) {
+            return User.Role.ADMIN;
+        }
+        return User.Role.MANAGER;
     }
 
     /** roleCode 是否为 catalog 已注册的标准角色。null/空白返回 false。 */
@@ -194,7 +207,28 @@ public final class RoleProfileCatalog {
         if (roleCode == null || roleCode.isBlank()) {
             return false;
         }
-        return DEFINITIONS.containsKey(roleCode.trim().toLowerCase(Locale.ROOT));
+        return DEFINITIONS.containsKey(roleCode.trim());
+    }
+
+    /**
+     * 返回 roleCode 的规范形式（来自 DEFINITIONS 的原始 key）。
+     * <p>
+     * 用于将大小写不一致的输入（如 {@code BidAdmin}、{@code BIDADMIN}）
+     * 归一化为规范码（如 {@code bidAdmin}），避免下游权限匹配失败。
+     * <p>
+     * 未注册的 roleCode 返回 null。
+     *
+     * @param roleCode 待归一化的角色码
+     * @return 规范角色码，未注册返回 null
+     */
+    public static String canonicalCode(String roleCode) {
+        if (roleCode == null || roleCode.isBlank()) {
+            return null;
+        }
+        String trimmed = roleCode.trim();
+        // case-insensitive TreeMap 查找
+        SeedDefinition def = DEFINITIONS.get(trimmed);
+        return def == null ? null : def.code();
     }
 
     /** 该 roleCode 是否应在颁发 Spring Security authority 时跳过 Legacy User.Role 兼容
@@ -206,8 +240,38 @@ public final class RoleProfileCatalog {
         if (roleCode == null || roleCode.isBlank()) {
             return false;
         }
-        String normalized = roleCode.trim().toLowerCase(Locale.ROOT);
+        String normalized = roleCode.trim();
         return ROLES_WITHOUT_LEGACY_ROLE_COMPAT.contains(normalized) || !DEFINITIONS.containsKey(normalized);
+    }
+
+    /**
+     * 将角色码转换为 Spring Security authority 名称。
+     * <p>
+     * 规则：去除前导斜杠，连字符转下划线再大写。
+     * <ul>
+     *   <li>{@code /bidAdmin} → {@code BIDADMIN}</li>
+     *   <li>{@code bid-TeamLeader} → {@code BID_TEAMLEADER}</li>
+     *   <li>{@code bid-otherDept} → {@code BID_OTHERDEPT}</li>
+     * </ul>
+     * 用于统一 {@code @PreAuthorize} 中的 {@code hasRole()/hasAuthority()} 写法，
+     * 避免各处手动 {@code replace("-", "_").toUpperCase()} 导致的不一致。
+     *
+     * @param roleCode 角色码（如 /bidAdmin）
+     * @return authority 名称（如 BIDADMIN），null/空白返回 null
+     */
+    public static String toAuthorityName(String roleCode) {
+        if (roleCode == null || roleCode.isBlank()) {
+            return null;
+        }
+        // 去除前导斜杠（OSS 角色码如 /bidAdmin 中的 / 不是 authority 名的一部分）
+        String normalized = roleCode.trim();
+        while (normalized.startsWith("/")) {
+            normalized = normalized.substring(1);
+        }
+        if (normalized.isEmpty()) {
+            return null;
+        }
+        return normalized.replace("-", "_").toUpperCase(java.util.Locale.ROOT);
     }
 
     public record SeedDefinition(
